--- a/busUnBunchr/templates/output.html
+++ b/busUnBunchr/templates/output.html
@@ -29,11 +29,12 @@
 	<!-- Styling for the map --!>
 	<style>
 		#googlemaps {
-			height: 60%;
-        	width: 60%;
+			height: 100%;
+        	width: 100%;
         	position:absolute;
-        	top: 50%;
-        	left: 20%;
+        	top: 0;
+        	left: 0;
+			z-index: -1;
     	}
 	</style>
 
@@ -90,6 +91,9 @@
 
 
      </div><!-- /.container -->
+<!-- change the search part of the src to directions once it starts working --!>
+
+<!--
 	<script type="text/javascript">
  
 	// The latitude and longitude of your business / place
@@ -129,6 +133,7 @@
 	 
 	google.maps.event.addDomListener(window, 'load', showGoogleMaps);
 	</script>
+--!>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
