--- a/busUnBunchr/templates/original.input.html
+++ b/busUnBunchr/templates/original.input.html
@@ -14,35 +14,10 @@
 
     <link rel="icon" type="image/png" href="../static/images/binoculars.png">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="../static/css/leaflet.css" /> --!>
-    <link rel="stylesheet" href="../static/css/scenic.css" />
+    <link rel="stylesheet" href="../static/css/starter-template.css" />
+    <!-- <link rel="stylesheet" href="../static/css/leaflet.css" />
+    <link rel="stylesheet" href="../static/css/scenic.css" /> --!>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-
-    <!-- Google Analytics -->
-	<!--
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-62007677-2', 'auto');
-      ga('send', 'pageview');
-    </script>
-	--!>
-	<!-- Google maps API library, necessary for map itself --!>
-	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-
-	<!-- Styling for the map --!>
-	<style>
-		#googlemaps {
-			height: 100%;
-        	width: 100%;
-        	position:absolute;
-        	top: 0;
-        	left: 0;
-        	z-index: -1;
-    	}
-	</style>
 
   </head>
 
@@ -66,21 +41,17 @@
 
 	<br><br>
 
-	<div class="container">
-		<h1>Optimizing transit for </h1>
-		<form action="/app" method="GET">
-			<!--
-			<ul class="input-list">
-				<li><input id="start" name="start" placeholder="e.g." type="text" value="81 Blair St, San Francisco"></li>
-				<li><input id="end" name="end" placeholder="e.g." type="text" value="22nd St Caltrain Station, San Francisco"></li>
-			</ul>
-			--!>
-          		<input type="text" id="starting_location" name="starting_location" placeholder="starting location">
-				<br>
-          		<input type="text" id="ending_location" name="ending_location" placeholder="ending location">
-				<br>
-        	<button id="explore" type="submit" class="btn btn-lg">Go!</button>
-		</form>
+	<div class="container" id="directions_space">
+		<div class="container">
+			<h1>Optimizing transit for the SF Muni system</h1>
+		</div>
+		<div id="input_box" class="affix">
+   			<input type="text" id="starting_location" name="starting_location" placeholder="Where are you starting?" autocomplete="off">
+			<br>
+   			<input type="text" id="ending_location" name="ending_location" placeholder="Where are you going?" autocomplete="off">
+			<br>
+    	   	<button id="submit_info" class="btn btn-lg btn-primary">Get directions</button>
+		</div>
 	</div>
 
 
@@ -100,72 +71,114 @@
     <script type="text/javascript" src="static/js/leaflet.spin.js"></script>
 	--!>
 
-    <!-- Google Maps API (for geocomplete)-->
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+    <!-- Google Maps API (for geocomplete) (note the 'sensor' argument is no longer required) -->
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="../static/js/jquery.geocomplete.min.js"></script>
 
 	<script type="text/javascript">
 
-	function initialize() {
+	// This code taken in part from a comment here:
+	// http://googlegeodevelopers.blogspot.de/2010/03/good-day-for-salesmen-that-travel-on.html
+	// Any vars that need to be defined outside the scope of functions as global vars, declare here
+	var directionDisplay;
+	var directionsService = new google.maps.DirectionsService();
+	var directionsVisible = false;
+	var origin;
+	var destination;
 
+	function initialize() {
+		directionsDisplay = new google.maps.DirectionsRenderer();
 		var position = [37.762718, -122.448161];
 		var myOptions = {
             zoom: 13,
-            streetViewControl: true,
             scaleControl: true,
             mapTypeId: google.maps.MapTypeId.ROADMAP
+			//center: latLng
         };
 
 		map = new google.maps.Map(document.getElementById('googlemaps'),
             myOptions);
-
-
         latLng = new google.maps.LatLng(position[0], position[1]);
-
-        map.setCenter(latLng);
-
+		map.setCenter(latLng);
+		directionsDisplay.setMap(map);
+		directionsDisplay.setPanel(document.getElementById('directionsPanel'));
     }
 
-    google.maps.event.addDomListener(window, 'load', initialize);
+	function calcRoute() {
+		var request = {
+			origin: origin,
+			destination: destination,
+			travelMode: google.maps.DirectionsTravelMode.TRANSIT
+			}
+		directionsService.route(request, function(response, status) {
+			if (status == google.maps.DirectionsStatus.OK) {
+				directionsDisplay.setDirections(response);
+			}
+		});
+		
+		directionsVisible = true;
+	}
+	
+	function updateMode() {
+		if (directionsVisible) {
+			claclRoute();
+		}
+	}
+	function reset() {
+    	directionsDisplay.setMap(null);
+    	directionsDisplay.setPanel(null);
+    	directionsDisplay = new google.maps.DirectionsRenderer();
+    	directionsDisplay.setMap(map);
+    	directionsDisplay.setPanel(document.getElementById("directionsPanel"));    
+  	}
+	google.maps.event.addDomListener(window, 'load', initialize);
 
 	$(document).ready(function(){
         $('#starting_location').geocomplete();
         $('#ending_location').geocomplete();
+    
+
+		$('#submit_info').click(function() {
+			origin = $('#starting_location').val();
+			destination = $('#ending_location').val();
+			console.log("Origin is "+origin)
+			console.log("Destination is "+destination)
+			//$('#starting_location').val("hey");
+			//var starting_loc = $('#starting_location').val();
+			//var ending_loc = $('#ending_location').val();
+
+			$.post('/app', {'start': origin, 'end': destination},
+				function(data){
+					console.log(data);
+					var prediction = data.prediction;
+					console.log(prediction)
+					var route_1 = data.route_1;
+					console.log(route_1)
+
+					// delete if the element exists so we reset the thing
+					if($('#bunching_results').length){
+						$('#bunching_results').remove();
+						console.log("#bunching_results.length evaluated to true.");
+					}
+					// what to display based on prediction value
+					if(prediction > 0.75){
+						$('#directions_space').append("<div id='bunching_results' class='panel panel-default'><p>The next vehicle serving your stop is from the route "+route_1+".</p>","<p style='color: red;'>The next bus is likely (approximately "+prediction*100+"% chance) to have heavy passenger loads. If possible, take the subsequent bus.</p></div>");
+					}
+					else if(prediction > 0.5 && prediction <= 0.75){
+						$('#directions_space').append("<div id='bunching_results' class='container'><p>The next vehicle serving your stop is from the route "+route_1+".</p>");
+						$('#directions_space').append("<p style='color: orange;'>The next bus has a moderate probability (approximately"+prediction+"%chance) of being delayed by excessive passenger load. Consider taking the subsequent bus.</p></div>");
+					}
+					else{
+						$('#directions_space').append("<div id='bunching_results' class='container'><p>The next vehicle serving your stop is from the route "+route_1+".</p>");
+						$('#directions_space').append("<p style='color: green;'>This route is running smoothly.</p></div>");
+					}
+				}); // end of $.post call
+
+			calcRoute();
+
+			});
       });
     </script>
-<!--
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $('#address1').geocomplete();
-        $('#address2').geocomplete();
-
-        var map = createMap(37.7577,-122.4376, 12);
-        var route = L.polyline([]).addTo(map);
-        var markers = L.markerClusterGroup([]).addTo(map);
-
-        $('form').on('submit', function(e){
-            e.preventDefault();
-            map.spin(true);
-            $.ajax({
-              type: "POST",
-              cache: false,
-              url: $(this).attr('action'),
-              data: $(this).serialize(),
-              success: function(data) {
-                map.spin(false);
-                $('#status').html(data.message);
-                if (data.success) {
-                  map.removeLayer(route);
-                  map.removeLayer(markers);
-                  route = addRoute(map, data.latlngs);
-                  markers = addClusters(map, data.clusters);
-                }
-              }
-            });
-        });
-      });
-    </script>
---!>
   </body>
 </html>
 
