--- a/busUnBunchr/static/css/starter-template.css
+++ b/busUnBunchr/static/css/starter-template.css
@@ -35,7 +35,7 @@ body {
 }
 
 #input_box.affix {
-    top: 150px;
+    top-margin: 10px;
     width: 250px;
     margin: 20px;
     padding: 20px;
@@ -43,27 +43,27 @@ body {
     color: #000;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 5px;
-    position: fixed;
+	/* to override some inherited command; janky */
+	position: relative;
 }
 
 #directions_space.container {
-    top: 50px;
-    width: 1000px;
+	top: 50px;
+    width: 0px;
     margin: 20px;
     padding: 20px;
     /*color: #FFF;*/
-    position: fixed;
+	position: fixed;
 }
 
 .directions_box {
-    top: 150px;
+	top-margin: 3px;
     width: 250px;
     margin: 20px;
     padding: 20px;
     color: #FFF;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.6);
     border-radius: 5px;
-    position: fixed;
 }
 
 input[type="text"] {
