Adding updated bunch_predictor.py

--- a/website/busUnBunchr/templates/directions_box.html
+++ b/website/busUnBunchr/templates/directions_box.html
@@ -42,6 +42,9 @@
 	{% endif %}
 
 	<div class="text-center">More info</div>
+	<div id="more_info" style="display: none;">
+		<p>Testing the hidden feature</p>
+	</div>
 	<br>
 	<p class="text-center" style="font-size: 12px;"><a href={{ google_maps_url }}>Directions on Google Maps</a> | <a href="https://www.sfmta.com/">SFMTA<a></p>
 </div>
