--- a/busUnBunchr_site/templates/index.html
+++ b/busUnBunchr_site/templates/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-			<li><a href="">About</a></li> <!-- just link slides and GitHub in 'About' --!>
+			<li><a href="http://www.slideshare.net/secret/yqOoEbJtIE6uwR">About</a></li> <!-- just link slides and GitHub in 'About' --!>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
