--- a/busUnBunchr_site/static/css/starter-template.css
+++ b/busUnBunchr_site/static/css/starter-template.css
@@ -41,6 +41,7 @@ body {
     padding: 20px;
     /*color: #FFF;*/
     color: #000;
+    /*background-color: rgba(0, 0, 0, 0.7);*/
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 5px;
 	/* to override some inherited command; janky */
@@ -84,6 +85,7 @@ input[type="text"] {
     width: 100%;
     padding: 5px;
     color: #FFF;
+    /*color: #9D9D9D;*/
     background-color: transparent;
     border-color: #AAA;
     border-radius: 5px;
@@ -102,8 +104,10 @@ input {
 }
 .btn-primary {
     color: #FFF;
+    /*color: #9D9D9D;*/
     background-color: #282C30;
-    border-color: #FFF;
+    /*border-color: #FFF;*/
+    border-color: #9D9D9D;
 }
 #spinner {
 	width: 0px;
