Spruced up index.html with banner image

--- a/busUnBunchr_site/templates/index.html
+++ b/busUnBunchr_site/templates/index.html
@@ -32,9 +32,10 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
 			<li><a href="http://www.slideshare.net/secret/yqOoEbJtIE6uwR">About</a></li> <!-- just link slides and GitHub in 'About' --!>
-			<li><a href="https://github.com/riemannzetagambit"><img src="../static/images/github_logo.png" width="15" height"15"></a></li> 
-			<li><a href="https://www.linkedin.com/in/davidcurtisstone"><img src="../static/images/linkedin_logo.png" width="15" height"15"></a></li> 
+			<li><a href="https://github.com/riemannzetagambit"><img src="../static/images/github_logo.png" width="20" height"20" style="margin-bottom: 2px"></a></li> 
+			<li><a href="https://www.linkedin.com/in/davidcurtisstone"><img src="../static/images/linkedin_logo.png" width="20" height"20" style="margin-bottom: 4px"></a></li> 
           </ul>
+		  <div class="nav navbar-nav navbar-right" style="margin-top: 7.5px;"> <img src="../static/images/buses_moving.png" height="40"></div>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
