Made front end work on Chrome, added a bit more verbose error-catching

--- a/busUnBunchr_site/static/css/starter-template.css
+++ b/busUnBunchr_site/static/css/starter-template.css
@@ -30,9 +30,9 @@ body {
 	opacity: 1.0;
 }
 
-.container {
+/*.container {
 	width: fit-content;
-}
+}*/
 
 #input_box.affix {
     top-margin: 10px;
