--- a/busUnBunchr_site/templates/index.html
+++ b/busUnBunchr_site/templates/index.html
@@ -27,7 +27,13 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">BusUnBunchr</a>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            	<span class="sr-only">Toggle navigation</span>
+            	<span class="icon-bar"></span>
+            	<span class="icon-bar"></span>
+            	<span class="icon-bar"></span>
+          	</button>
+			<a class="navbar-brand" href="#">BusUnBunchr</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -41,9 +47,11 @@
     </nav>
 
 
+<!--
 	<div class="container" id="banner">
 		<h1>Optimizing transit for the SF Muni system</h1>
 	</div>
+--!>
 	<div class="container" id="directions_space">
 		<div id="input_box" class="affix">
    			<input type="text" id="starting_location" name="starting_location" placeholder="Where are you starting?" autocomplete="off">
