--- a/busUnBunchr_site/templates/index.html
+++ b/busUnBunchr_site/templates/index.html
@@ -125,13 +125,70 @@
 		
 		directionsVisible = true;
 	}
+	/*
+	You can now create a spinner using any of the variants below:
 	
-	//function updateMode() {
-	//	if (directionsVisible) {
-// M//ade a correction here
-	//		calcRoute();
-	//	}
-	//}
+	$("#el").spin(); // Produces default Spinner using the text color of #el.
+	$("#el").spin("small"); // Produces a 'small' Spinner using the text color of #el.
+	$("#el").spin("large", "white"); // Produces a 'large' Spinner in white (or any valid CSS color).
+	$("#el").spin({ ... }); // Produces a Spinner using your custom settings.
+	
+	$("#el").spin(false); // Kills the spinner.
+	
+	*/
+	(function ($) {
+	    $.fn.spin = function (opts, color) {
+	        var presets = {
+	            "tiny": {
+	                lines: 8,
+	                length: 2,
+	                width: 2,
+	                radius: 3
+	            },
+	                "small": {
+	                lines: 8,
+	                length: 4,
+	                width: 3,
+	                radius: 5
+	            },
+	                "large": {
+	                lines: 10,
+	                length: 8,
+	                width: 4,
+	                radius: 8
+	            }
+	        };
+	        if (Spinner) {
+	            return this.each(function () {
+	                var $this = $(this),
+	                    data = $this.data();
+	
+	                if (data.spinner) {
+	                    data.spinner.stop();
+	                    delete data.spinner;
+	                }
+	                if (opts !== false) {
+	                    if (typeof opts === "string") {
+	                        if (opts in presets) {
+	                            opts = presets[opts];
+	                        } else {
+	                            opts = {};
+	                        }
+	                        if (color) {
+	                            opts.color = color;
+	                        }
+	                    }
+	                    data.spinner = new Spinner($.extend({
+	                        color: $this.css('color')
+	                    }, opts)).spin(this);
+	                }
+	            });
+	        } else {
+	            throw "Spinner class not available.";
+	        }
+	    };
+	})(jQuery);
+	
 	function reset() {
     	directionsDisplay.setMap(null);
     	directionsDisplay.setPanel(null);
@@ -152,11 +209,15 @@
 			console.log("Origin is "+origin)
 			console.log("Destination is "+destination)
 			// Make it SPIN
-			$("#spinner").append(spinner.el);
+			// old method of spinning
+			//$("#spinner").append(spinner.el);
+			$('#spinner').spin()
 
 			$.post('/app', {'start': origin, 'end': destination},
 				function(data){
-					spinner.stop();
+					// old method of spinning
+					//spinner.stop();
+					$('#spinner').spin(false);
 					// add a little message that says if route was found
 					if($('#status_message').length){
 						$('#status_message').remove();
