--- a/busUnBunchr_site/static/css/starter-template.css
+++ b/busUnBunchr_site/static/css/starter-template.css
@@ -36,7 +36,7 @@ body {
 
 #input_box.affix {
     top-margin: 10px;
-    width: 300px;
+    width: 350px;
     margin: 20px;
     padding: 20px;
     /*color: #FFF;*/
@@ -49,7 +49,8 @@ body {
 }
 
 #directions_space.container {
-	top: 50px;
+	/*top: 50px;*/
+	top: 15px;
     width: 0px;
     margin: 20px;
     padding: 20px;
@@ -73,7 +74,7 @@ body {
 
 .directions_box {
 	top-margin: 3px;
-    width: 300px;
+    width: 350px;
     margin: 20px;
     padding: 20px;
     color: #FFF;
