removed some files unnecessary for project, added Nextbus acknowledgement to directions_box

--- a/busUnBunchr_site/templates/directions_box.html
+++ b/busUnBunchr_site/templates/directions_box.html
@@ -70,6 +70,7 @@
 		</p>
 		</div>
 		<br>
-	<p class="text-center" style="font-size: 12px;"><a href={{ google_maps_url }}>Directions on Google Maps</a> | <a href="https://www.sfmta.com/">SFMTA<a></p>
+	<p class="text-center" style="font-size: 12px;"><a href={{ google_maps_url }}>Directions on Google Maps</a> | <a href="https://www.sfmta.com/">SFMTA</a></p>
+	<p class="text-center" style="font-size: 12px;">Realtime information provided by <a href="http://www.nextbus.com/#!/sf-muni/">Nextbus<a></p>
 </div>
 
